--- a/templates/projects/projectDetail.twig
+++ b/templates/projects/projectDetail.twig
@@ -105,7 +105,7 @@
 				</div>
 				<div id="my-keen-slider" class="keen-slider col-12 col-md-10">
 					{% for item in project.gallery %}
-						<div class="keen-slider__slide number-slide bg-accent-dark rounded-4" style="aspect-ratio:0.5; background-image: url('{{ asset('uploads/gallery/' ~ item) }}'); background-repeat: no-repeat; background-size: contain; background-position: center;"></div>
+						<div class="keen-slider__slide number-slide bg-accent-dark rounded-4" style="aspect-ratio:0.5; background-image: url('{{ asset(gallery_directory ~ item) }}'); background-repeat: no-repeat; background-size: contain; background-position: center;"></div>
 					{% endfor %}
 				</div>
 				<script>
