--- a/templates/timeline_cv/pdf.html.twig
+++ b/templates/timeline_cv/pdf.html.twig
@@ -91,13 +91,14 @@
 					<div class="right">México, CDMX</div>
 				</div>
 				<div class="row">
-					<div class="left">Bachelor, Computer Science Specialized in Computer Graphics and Game Design.  GPA [9.3]</div>
+					<div class="left">Bachelor in Computer Science GPA [9.3]</div>
 					<div class="right">
 						Graduation: Jun 2023
 					</div>
 				</div>
 				<ul class="row">
 					<li>Nova Orion Startup Award for Learning With Whe Sea educational video game 2020.</li>
+					<li>Specialization in Computer Graphics and Game Design.</li>
 				</ul>
 
 				<div class="row">
