--- a/templates/timeline_cv/index.html.twig
+++ b/templates/timeline_cv/index.html.twig
@@ -36,7 +36,7 @@
 			<div class="offcanvas-body ">
 				<div class="row bg-main-dark p-3 roinded-3" style="z-index: 10; top:11vh;">
 
-					<form action="{{ path('app_timeline_cv') }}" method="post" target="_blank">
+					<form action="{{ path('app_timeline_cv') }}" method="get" target="">
 						<div class="col-12 m-0 p-0">
 							<div class="row">
 								<h6 class="col-auto ">Filter by Tags:</h6>
@@ -49,7 +49,7 @@
 							</div>
 							<div class="row">
 								{% for tag in tags %}
-									<input type="checkbox" class="col-auto btn-check" id="btn-check-outlined-{{ tag.name }}" name="tags" value="{{ tag.name }}" checked>
+									<input type="checkbox" class="col-auto btn-check" id="btn-check-outlined-{{ tag.name }}" name="tags[]" value="{{ tag.name }}" checked>
 									<label class="col-auto btn btn-outline-main" for="btn-check-outlined-{{ tag.name }}">{{ tag.name }}</label><br>
 								{% endfor %}
 
