--- a/templates/timeline_cv/index.html.twig
+++ b/templates/timeline_cv/index.html.twig
@@ -36,7 +36,7 @@
 			<div class="offcanvas-body ">
 				<div class="row bg-main-dark p-3 roinded-3" style="z-index: 10; top:11vh;">
 
-					<form action="{{ path('app_timeline_cv') }}" method="get" target="">
+					<form action="{{ path('app_timeline_cv') }}" method="get" target="_blank">
 						<div class="col-12 m-0 p-0">
 							<div class="row">
 								<h6 class="col-auto ">Filter by Tags:</h6>
@@ -68,7 +68,7 @@
 								{% endfor %}
 
 								{# Sort the years in ascending order #}
-								{% set years = years|sort %}
+								{% set years = years|sort|reverse %}
 
 								{# Generate radio buttons for each year #}
 								{% for year in years %}
