--- a/templates/timeline_cv/index.html.twig
+++ b/templates/timeline_cv/index.html.twig
@@ -15,7 +15,7 @@
 			content: '';
 			position: absolute;
 			opacity: 0.95;
-			left: 48.5vw;
+			left: 49.5vw;
 			top: 0;
 			bottom: 0;
 			width: 1vw;
@@ -28,64 +28,18 @@
 	<canvas id="bgcanvas"></canvas>
 	<div id="timeline" class="row pb-5 p-0 m-0 justify-content-center w-100 position-relative" style="min-height: 100vh; margin-top: -2vh; ">
 
-		<div class="offcanvas offcanvas-start bg-main-gradient-circle" style="min-width:33vw;" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-			<div class="offcanvas-header">
-				<button type="button" class="  bg-accent text-white " data-bs-dismiss="offcanvas" aria-label="Close">X</button>
-				<h3 class="offcanvas-title" id="offcanvasExampleLabel">Timeline Filters:</h3>
-			</div>
-			<div class="offcanvas-body ">
-				<div class="row bg-main-dark p-3 roinded-3" style="z-index: 10; top:11vh;">
+		{% set years = [] %}
 
-					<form action="{{ path('app_timeline_cv') }}" method="get" target="_blank">
-						<div class="col-12 m-0 p-0">
-							<div class="row">
-								<h6 class="col-auto ">Filter by Tags:</h6>
+		{# Loop through events to gather unique years from both start and end dates #}
+		{% for event in timeline_events %}
+			{% if event.endDate|date('Y') not in years %}
+				{% set years = years|merge([event.endDate|date('Y')]) %}
+			{% endif %}
+		{% endfor %}
 
-								<input type="radio" class="btn-check" name="options-outlined" id="success-outlined" autocomplete="off" checked>
-								<label class="col-auto btn btn-outline-success" for="success-outlined" onclick="selectAllTags(true)">All</label>
-
-								<input type="radio" class="btn-check" name="options-outlined" id="danger-outlined" autocomplete="off">
-								<label class="col-auto btn btn-outline-danger" for="danger-outlined" onclick="selectAllTags(false)">None</label>
-							</div>
-							<div class="row">
-								{% for tag in tags %}
-									<input type="checkbox" class="col-auto btn-check" id="btn-check-outlined-{{ tag.name }}" name="tags[]" value="{{ tag.name }}" checked>
-									<label class="col-auto btn btn-outline-main" for="btn-check-outlined-{{ tag.name }}">{{ tag.name }}</label><br>
-								{% endfor %}
-
-							</div>
-						</div>
-						<div class="col-12 m-0 p-0">
-							<h6>Filter by Year:</h6>
-							<div class="btn-group" role="group" aria-label="Year buttons">
-								{% set years = [] %}
-
-								{# Loop through events to gather unique years from both start and end dates #}
-								{% for event in timeline_events %}
-									{% if event.endDate|date('Y') not in years %}
-										{% set years = years|merge([event.endDate|date('Y')]) %}
-									{% endif %}
-								{% endfor %}
-
-								{# Sort the years in ascending order #}
-								{% set years = years|sort|reverse %}
-
-								{# Generate radio buttons for each year #}
-								{% for year in years %}
-									<input type="radio" class="btn-check" name="btnradio" id="btnradio{{ loop.index }}" autocomplete="off" {% if loop.index == 1 %} checked {% endif %}>
-									<label class="btn btn-outline-main" for="btnradio{{ loop.index }}" onclick="showEvents('{{ year }}')">{{ year }}</label>
-								{% endfor %}
-
-							</div>
-
-
-						</div>
-						<button type="submit">Generate PDF</button>
-					</form>
-
-				</div>
-			</div>
-		</div>
+		{# Sort the years in ascending order #}
+		{% set years = years|sort|reverse %}
+		{% include 'timeline_cv/timelineFilter.twig' with {'tags': tags, 'years': years} %}
 
 		<h3 class="text-center text-capitalize my-5 white-text ">TIMELINE</h3>
 
@@ -100,15 +54,15 @@
 		{% for year in years %}
 			{% set events_in_year = timeline_events|filter(e => (e.endDate|date('Y') == year)) %}
 
-			<div class="events-wrapper container-fluid row p-0 m-0 justify-content-center align-items-center m-0" id="events-{{ year }}" style="display: {{ loop.first ? 'block' : 'none' }};">
-				<div class="row justify-content-center mt-4">
-					<h4 class="col-auto bg-dark text-center shadow-custom px-5 py-3 text-warning border border-warning rounded-3">{{ year }}</h4>
+			<div class="events-wrapper container-fluid row p-0 m-0 justify-content-center align-items-center" id="{{ year }}" style="display: 'block';">
+				<div class="row justify-content-center p-0 m-0">
+					<h4 class="col-auto bg-dark text-center shadow-custom m-0 px-5 py-3 text-warning border border-warning rounded-3">{{ year }}</h4>
 				</div>
 				<div class="timeline-container row justify-content-center p-0 m-0 ">
 					{% for evkey, event in events_in_year %}
-						<div class=" col-12 row justify-content-center text-white">
+						<div class=" col-12 row justify-content-center text-white p-0 m-0 ">
 
-							<div class="timeline-event card rounded-4 m-5 shadow-custom bg-main-gradient{% if loop.index  % 2 == 0 %}-alter{% endif %}" style="width: 36rem; max-width: 90vw;">
+							<div class="timeline-event card rounded-4 my-5 shadow-custom bg-main-gradient{% if loop.index  % 2 == 0 %}-alter{% endif %}" style="width: 36rem; max-width: 90vw;">
 
 								<div class="card-body row m-0 justify-content-center text-center">
 
@@ -144,7 +98,6 @@
 										</div>
 									{% endif %}
 
-
 									{% if event.projects is defined %}
 										<h5 class="card-title">Asociated projects:</h5>
 										<div class="row">
@@ -158,6 +111,7 @@
 											{% endfor %}
 										</div>
 									{% endif %}
+
 								</div>
 
 								<div class="tags" style="display: none;">{{ event.tags|join(',') }}</div>
@@ -179,7 +133,7 @@
 				Let's build together!</button>
 		</div>
 
-		<div class="position-fixed p-0 m-0" style=" top:30%; left: 0;">
+		<div class="position-fixed p-0 m-0" style=" top:30%; left: 1rem;">
 			<button class="custom-btn rounded-2 p-1 bg-main text-white" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
 				<svg width="44" height="44" viewbox="0 0 74 74" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M67.8333 9.25H6.16667L30.8333 38.4183V58.5833L43.1667 64.75V38.4183L67.8333 9.25Z" stroke="#F3F3F3" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
