--- a/templates/timeline_cv/pdf.html.twig
+++ b/templates/timeline_cv/pdf.html.twig
@@ -79,7 +79,7 @@
 				<a href="https://foundtexas.mx">Portfolio</a>
 			</p>
 
-			<p>I'm Rodolfo, a computer scientist specialized in Graphics engineering, with skills in Project Management, Web and Game Development. I’m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for users.</p>
+			<p>I'm a passionate computer scientist specialized in 3D Graphics, with skill on Agile Iterative, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to immersive experiences for the users.</p>
 
 			<div>
 				<div class="row center">
