--- a/templates/projects/Projects.twig
+++ b/templates/projects/Projects.twig
@@ -21,7 +21,7 @@
 					{% for project in projects %}
 						<a class="col-6 col-md-3 col-lg-2 my-2 " href="{{project.linkref ?? path('app_project_detail', {'id': project.id}) }}">
 							<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow-custom cursor-pointer" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; ">
-								<img src="{{ project.iconref }}" style="height: 100%; width: auto;" alt="Gallery Image 1">
+								<img src="{{ project.iconref }}" style="height: auto; width: 100%;" alt="Gallery Image 1">
 							</div>
 						</a>
 					{% endfor %}
