--- a/templates/index/AboutMe.twig
+++ b/templates/index/AboutMe.twig
@@ -1,23 +1,23 @@
 
 <section id="aboutme" class="container-fluid d-flex flex-column justify-content-center align-items-center p-0" style="min-height: 93vh; width: 100%; overflow: hidden;">
     <img class="mx-auto position-fixed bg-dark" 
-     style="z-index: -100000; filter: blur(2px) brightness(66%); height: 100vh; width: auto; 
+     style="z-index: -100000; brightness(69%); height: 100vh; width: auto; 
             mask-image: linear-gradient(to right, transparent, black 20%, black 80%, transparent);" 
-     src="{{ asset('gridbg.gif') }}" 
+     src="{{ asset('gridbg.svg') }}" 
      alt="Other Image"/>
 
-    <div class="rounded-circle bg-dark border border-light">
+    <div class="rounded-circle bg-dark border border-light d-none d-md-block">
         <img class="m-2" style="height: 15vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
     </div>
-    <div class="rounded-trapezoid container-md bg-light opacity-75 p-1 d-flex flex-column align-items-center justify-content-center my-5" style="min-height: 35vh;">
+    <div class="rounded-trapezoid container-md col-lg-6 bg-light p-1 d-flex flex-column align-items-center justify-content-center my-3" style="min-height: 35vh; opacity:0.9;">
         <div class=" container-fluid rounded-trapezoid bg-main-dark-translucent d-flex flex-column align-items-center justify-content-around" style="min-height: 35vh;">
-            <div class="row mt-md-0 mt-md-3 m-1">
-                <h2 class="p-md-2 my-1 text-center accent-color"> <i class="fa fa-laptop fa-xs" aria-hidden="true"></i> Web & Game Dev <i class="fa fa-gamepad fa-md " aria-hidden="true"></i> </h2>
+            <div class="row mt-md-0 mt-md-3 p-0">
+                <h2 class="p-md-2 p-0 my-1 text-center accent-color"> <i class="fa fa-laptop fa-xs" aria-hidden="true"></i> Web & Game Dev <i class="fa fa-gamepad fa-md " aria-hidden="true"></i> </h2>
             </div>
             <div class="row mx-4 mx-md-5">
                 <!-- Added 'typing-effect' class to apply the typing animation -->
                 <p class="typing-effect white-text text-justify text-lg m-1 fs-6">
-                    Greetings! Welcome to my corner of the web. I'm Rodolfo also known as FoundTexas. I'm a computer scientist specialized in 3D Graphics, with skill on Project Management, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for the users.
+                    Greetings! Welcome to my corner of the web. I'm Rodolfo, computer scientist specialized in 3D Graphics, with skill on Project Management, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for the users.
                 </p>
             </div>
             <div>
