--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,19 +22,9 @@
 
 		<!-- font-awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
-		<!-- bootstrap -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-		
-		<!-- bootstrap 
-		<link href="{{ asset('bootstrap/css/bootstrap.css') }}" rel="stylesheet">
-		<script src="{{ asset('bootstrap/js/bootstrap.js') }}"></script> 
-		-->
-
-		<!-- sweetalert2 -->
+		 <!-- sweetalert2 -->
 		<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.min.css" rel="stylesheet">
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.all.min.js"></script>
 
@@ -46,47 +36,45 @@
 
 		<link href="{{ asset('styles/app.css') }}" rel="stylesheet">
 		<script src="{{ asset('js/essentials.js') }}"></script>
+		<!-- bootstrap-->
+		<script src="{{ asset('js/audioPlayer.js') }}"></script>
 	</head>
-	
+
 	<body>
-		<div id="loading" class="position-fixed container-fluid p-0" style="z-index: 900000; height:101vh; background-color:#111111; display:block;">
-			<div class="row d-flex align-items-center justify-content-center p-5 w-100 h-100" >
-				<img class="" src="{{ asset('loadgif.gif') }}" style="width: 40vw; height:auto;" alt="Loading..." />
+		<div id="loading" class="position-fixed top-0" style="z-index: 90000000; height:102vh; width:102vw; background-color:#111111; display:block;">
+			<div class="row d-flex align-items-center justify-content-center  w-100 h-100">
+				<img class="" src="{{ asset('loadgif.gif') }}" style="width: 40rem; height:auto;" alt="Loading..."/>
 			</div>
 		</div>
 
 		<script>
-			document.addEventListener("DOMContentLoaded", function() {
+			document.addEventListener("DOMContentLoaded", function () { // Event listener to detect when the page is being refreshed
+window.addEventListener('beforeunload', function () {
+showLoading(); // Show the loading spinner before the page is refreshed
+});
 
-				// Event listener to detect when the page is being refreshed
-				window.addEventListener('beforeunload', function() {
-					showLoading(); // Show the loading spinner before the page is refreshed
-				});
+// Event listener to detect when the page is being shown from bfcache (navigating back)
+window.addEventListener('pageshow', function (event) {
+if (event.persisted) { // Page is being loaded from the bfcache (navigated back)
+hideLoading(); // Immediately hide the loading spinner
+}
+});
 
-				// Event listener to detect when the page is being shown from bfcache (navigating back)
-				window.addEventListener('pageshow', function(event) {
-					if (event.persisted) {
-						// Page is being loaded from the bfcache (navigated back)
-						hideLoading(); // Immediately hide the loading spinner
-					}
-				});
+});
 
-			});
+function showLoading() {
+document.getElementById('loading').style.display = 'block';
+}
 
-			function showLoading() {
-					document.getElementById('loading').style.display = 'block';
-				}
+// Function to hide the loading spinner
+function hideLoading() {
+document.getElementById('loading').style.display = 'none';
+}
 
-				// Function to hide the loading spinner
-				function hideLoading() {
-					document.getElementById('loading').style.display = 'none';
-				}
-
-				// Add a delay before hiding the loading spinner (example: 1000ms = 1 second)
-				setTimeout(function() {
-					hideLoading(); // Hide the loading spinner after a short delay
-				}, 1000); // Change the delay value as needed
-				
+// Add a delay before hiding the loading spinner (example: 1000ms = 1 second)
+setTimeout(function () {
+hideLoading(); // Hide the loading spinner after a short delay
+}, 2000); // Change the delay value as needed
 		</script>
 
 		{% block sound %}
@@ -107,13 +95,14 @@
 
 		{% endblock %}
 
-		
+		<div class="w-100 p-0 mx-0" style="margin-top: 13vh;"> {% block body %}{% endblock %}
 
-		{% block body %}{% endblock %}
+			</div>
+			<div class="bottom-0">
+				{% block foot %}
+					{% include 'footer.twig' with {'bg':' bg-transparent'} %}
+				{% endblock %}
+			</div>
 
-		{% block foot %}
-			{% include 'index/footer.twig' %}
-		{% endblock %}
-
-	</body>
-</html>
+		</body>
+	</html>
