--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -5,14 +5,19 @@
 
 {% block javascripts %}
 	{{ parent() }}
-	<script src="{{ asset('js/audioPlayer.js') }}"></script>
 {% endblock %}
 
 {% block body %}
-
 	{% include 'index/AboutMe.twig' %}
-	{% include 'index/GameHighlights.twig' with {'games': games, 'type': 'games','textRef': 'GamesPortfolio', 'headText': 'Games Portfolio', 'darkbg': true} %}
-	{% include 'index/ProjectsHighlights.twig' with {'projects': projects, 'type': 'web-projects','textRef': 'WebPortfolio', 'headText': 'Web Portfolio', 'darkbg': true, 'color': 'bg-main-gradient-alter'} %}
+
+	<canvas id="bgcanvas"></canvas>
+
+	{% include 'index/GameHighlights.twig' with {'games': games, 'type': 'game', 'textRef': 'GamesPortfolio', 'headText': 'Games Portfolio', 'darkbg': true} %}
+	{% include 'index/ProjectsHighlights.twig' with {'projects': projects, 'type': 'web', 'textRef': 'WebPortfolio', 'headText': 'Web Portfolio', 'darkbg': true, 'color': 'bg-main-gradient-alter'} %}
 	{% include 'index/contact.twig' %}
 
+{% endblock %}
+
+{% block foot %}
+	{% include 'footer.twig' with {'bg':' bg-accent-dark'} %}
 {% endblock %}
