--- a/templates/timeline_cv/index.html.twig
+++ b/templates/timeline_cv/index.html.twig
@@ -14,7 +14,8 @@
 		.timeline-container:before {
 			content: '';
 			position: absolute;
-			left: 48.5vw;
+			opacity: 0.95;
+			left: 49.5vw;
 			top: 0;
 			bottom: 0;
 			width: 1vw;
@@ -24,64 +25,22 @@
 		}
 	</style>
 
-	<div id="timeline" class="row mb-5 p-0 bg-accent-dark" style="min-height: 100vh;">
-		{% include 'index/IndexHeader.twig' with {'upRef': 'aboutme', 'textRef': 'timeline', 'headText': 'timeline', 'darkbg': true} %}
+	<canvas id="bgcanvas"></canvas>
+	<div id="timeline" class="row pb-5 p-0 m-0 justify-content-center w-100 position-relative" style="min-height: 100vh; margin-top: -2vh; opacity:0.97;">
 
-		<div class="col-12 row fixed-top py-2 position-sticky bg-main-dark rounded-4" style="z-index: 1042;">
+		{% set years = [] %}
 
-			<div class="col-md-8 m-0 p-0">
-				{% set all_tags = [] %}
-				{% for event in timeline_events %}
-					{% for tag in event.main.tags %}
-						{% if tag not in all_tags %}
-							{% set all_tags = all_tags|merge([tag]) %}
-						{% endif %}
-					{% endfor %}
-				{% endfor %}
-				<div class="row">
-					<h6 class="col-auto ">Filter by Tags:</h6>
+		{# Loop through events to gather unique years from both start and end dates #}
+		{% for event in timeline_events %}
+			{% if event.endDate|date('Y') not in years %}
+				{% set years = years|merge([event.endDate|date('Y')]) %}
+			{% endif %}
+		{% endfor %}
 
-					<input type="radio" class="btn-check" name="options-outlined" id="success-outlined" autocomplete="off" checked>
-					<label class="col-auto btn btn-outline-success" for="success-outlined" onclick="selectAllTags(true)">All</label>
+		{# Sort the years in ascending order #}
+		{% set years = years|sort|reverse %}
 
-					<input type="radio" class="btn-check" name="options-outlined" id="danger-outlined" autocomplete="off">
-					<label class="col-auto btn btn-outline-danger" for="danger-outlined" onclick="selectAllTags(false)">None</label>
-				</div>
-				<div class="row">
-					{% for tag in all_tags %}
-						<input type="checkbox" class="col-auto btn-check" id="btn-check-outlined-{{ tag }}" name="tags" value="{{ tag }}" checked>
-						<label class="col-auto btn btn-outline-main" for="btn-check-outlined-{{ tag }}">{{ tag }}</label><br>
-					{% endfor %}
-
-				</div>
-			</div>
-			<div class="col-md-4 m-0 p-0">
-				<h6>Filter by Year:</h6>
-				<div class="btn-group" role="group" aria-label="Year buttons">
-					{% set years = [] %}
-
-					{# Loop through events to gather unique years from both start and end dates #}
-					{% for event in timeline_events %}
-						{% if event.main.startDate|date('Y') not in years %}
-							{% set years = years|merge([event.main.startDate|date('Y')]) %}
-						{% endif %}
-						{% if event.main.endDate|date('Y') not in years %}
-							{% set years = years|merge([event.main.endDate|date('Y')]) %}
-						{% endif %}
-					{% endfor %}
-
-					{# Sort the years in ascending order #}
-					{% set years = years|sort %}
-
-					{# Generate radio buttons for each year #}
-					{% for year in years %}
-						<input type="radio" class="btn-check" name="btnradio" id="btnradio{{ loop.index }}" autocomplete="off" {% if loop.index == 1 %} checked {% endif %}>
-						<label class="btn btn-outline-main" for="btnradio{{ loop.index }}" onclick="showEvents('{{ year }}')">{{ year }}</label>
-					{% endfor %}
-
-				</div>
-			</div>
-		</div>
+		<h3 class="text-center text-capitalize my-5 white-text ">TIMELINE</h3>
 
 		{% if years is empty %}
 
@@ -92,45 +51,45 @@
 		{% endif %}
 
 		{% for year in years %}
-			{% set events_in_year = timeline_events|filter(e => (e.main.startDate|date('Y') == year or e.main.endDate|date('Y') == year)) %}
+			{% set events_in_year = timeline_events|filter(e => (e.endDate|date('Y') == year)) %}
 
-			<div class="events-wrapper container-fluid row justify-content-center align-items-center m-0" id="events-{{ year }}" style="display: {{ loop.first ? 'block' : 'none' }};">
-				<div class="row justify-content-center mt-4 m-0">
+			<div class="events-wrapper container-fluid row p-0 m-0 justify-content-center align-items-center" id="{{ year }}" style="display: 'block';">
+				<div class="row justify-content-center p-0 m-0">
 					<h4 class="col-auto bg-dark text-center shadow-custom m-0 px-5 py-3 text-warning border border-warning rounded-3">{{ year }}</h4>
 				</div>
 				<div class="timeline-container row justify-content-center p-0 m-0 ">
-					{% for event in events_in_year %}
-						<div class=" col-12 row justify-content-center text-white">
+					{% for evkey, event in events_in_year %}
+						<div class=" col-12 row justify-content-center text-white p-0 m-0 ">
 
-							<div class="timeline-event card rounded-4 m-5 shadow-custom bg-main-gradient{% if loop.index  % 2 == 0 %}-alter{% endif %}" style="width: 36rem; max-width: 90vw;">
+							<div class="timeline-event card rounded-4 my-5 shadow-custom bg-main-gradient{% if loop.index  % 2 == 0 %}-alter{% endif %}" style="width: 36rem; max-width: 90vw;">
 
 								<div class="card-body row m-0 justify-content-center text-center">
 
 									<h5 class="col-auto card-title">
-										<strong class='accent-color'>{{ event.main.startDate|date('F-Y') ~ ' - ' ~ event.main.endDate|date('F-Y') }}</strong>
+										<strong class='accent-color'>{{ event.startDate|date('F-Y') ~ ' - ' ~ event.endDate|date('F-Y') }}</strong>
 									</h5>
-									<h3 class="col-auto card-title">{{ event.main.name }}</h3>
+									<h3 class="col-auto card-title">{{ event.name }}</h3>
 
 									{% if event.main.description is defined %}
 										<div class="p-2 bg-dark rounded-3">
-											<p class="m-0">{{ event.main.description }}</p>
+											<p class="m-0">{{ event.description }}</p>
 										</div>
 									{% endif %}
 
 
-									{% if event.main.bullets is defined and event.main.bullets|length > 0 %}
+									{% if event.bullets is defined and event.bullets|length > 0 %}
 										<div class="row my-2">
 											<div class="col">
-												<button class="custom-btn rounded-2 p-1 m-2 bg-accent text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEvent{{ event.main.id }}" aria-expanded="false" aria-controls="collapseEvent{{ event.main.id }}">
+												<button class="custom-btn rounded-2 p-1 m-2 bg-accent text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEvent{{ evkey }}" aria-expanded="false" aria-controls="collapseEvent{{ evkey }}">
 													<i class="fa fa-info-circle" aria-hidden="true"></i>
 													More Info
 												</button>
 											</div>
 										</div>
 										<div class="row">
-											<div class="col collapse" id="collapseEvent{{ event.main.id }}">
+											<div class="col collapse" id="collapseEvent{{ evkey }}">
 												<ul class="list-group list-group-flush">
-													{% for point in event.main.bullets %}
+													{% for point in event.bullets %}
 														<li class="list-group-item p-0 m-0">{{ point }}</li>
 													{% endfor %}
 												</ul>
@@ -138,13 +97,12 @@
 										</div>
 									{% endif %}
 
-
 									{% if event.projects is defined %}
 										<h5 class="card-title">Asociated projects:</h5>
 										<div class="row">
-											{% for project in event.projects %}
+											{% for key, project in event.projects %}
 												<div class="col-auto">
-													<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; max-width: 7rem;" onclick="window.location.href='{{ path('app_project_detail', {'id': project.id}) }}'">
+													<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; max-width: 7rem;" onclick="window.location.href='{{ path('app_project_detail', {'id': key}) }}'">
 														<img src="{{ project.iconref }}" style="height: 100%; width: auto;" alt="{{ project.name }}">
 													</div>
 													<h6 class="card-title">{{project.name}}</h6>
@@ -152,9 +110,10 @@
 											{% endfor %}
 										</div>
 									{% endif %}
+
 								</div>
 
-								<div class="tags" style="display: none;">{{ event.main.tags|join(',') }}</div>
+								<div class="tags" style="display: none;">{{ event.tags|join(',') }}</div>
 							</div>
 						</div>
 					{% endfor %}
@@ -173,7 +132,16 @@
 				Let's build together!</button>
 		</div>
 
+		<div class="position-fixed p-0 m-0" style=" top:30%; left: 1rem;">
+			<button class="custom-btn rounded-2 p-1 bg-main text-white" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+				<svg width="44" height="44" viewbox="0 0 74 74" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M67.8333 9.25H6.16667L30.8333 38.4183V58.5833L43.1667 64.75V38.4183L67.8333 9.25Z" stroke="#F3F3F3" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+				</svg>
+			</button>
+		</div>
 	</div>
+
+	{% include 'timeline_cv/timelineFilter.twig' with {'tags': tags, 'years': years} %}
 
 	<script src="{{ asset('js/timeLine.js') }}"></script>
 {% endblock %}
